fixed reduced width on desktop due to scrollbar issue

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -48,7 +48,7 @@
 }
 
 .pathRoot {
-  margin-right: 2px;
+  margin-right: 6px;
   opacity: 0.45;
   letter-spacing: -0.04em;
 }
@@ -74,5 +74,9 @@
 
   .path {
     flex-wrap: wrap;
+  }
+
+  .pathRoot {
+    margin-right: 2px;
   }
 }
