--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -7,6 +7,6 @@
 
 @media only screen and (max-width: 500px) {
   .layout {
-    padding: 0em 2.5em 2em 2.5em;
+    padding: 0em 2.5em 3.5em 2.5em;
   }
 }
